<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.3.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>edu.gatech</groupId>
	<artifactId>ResultsManager</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ResultsManager</name>
	<description>PACER Results Manager</description>

	<properties>
		<java.version>1.8</java.version>
		<fhir.version>5.1.0</fhir.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
	    	<groupId>ca.uhn.hapi.fhir</groupId>
	    	<artifactId>hapi-fhir-base</artifactId>
	    	<version>${fhir.version}</version>
	    </dependency>
	    <dependency>
	    	<groupId>ca.uhn.hapi.fhir</groupId>
	    	<artifactId>hapi-fhir-client</artifactId>
	    	<version>${fhir.version}</version>
	    </dependency>
	    <dependency>
	    	<groupId>ca.uhn.hapi.fhir</groupId>
	    	<artifactId>hapi-fhir-structures-dstu2</artifactId>
	    	<version>${fhir.version}</version>
	    </dependency>
	    <dependency>
	    	<groupId>ca.uhn.hapi.fhir</groupId>
	    	<artifactId>hapi-fhir-structures-dstu3</artifactId>
	    	<version>${fhir.version}</version>
	    </dependency>
		<dependency>
	    	<groupId>ca.uhn.hapi.fhir</groupId>
	    	<artifactId>hapi-fhir-structures-r4</artifactId>
	    	<version>${fhir.version}</version>
	    </dependency>
	    <dependency>
	    	<groupId>gatech.edu</groupId>
	    	<artifactId>STIECR</artifactId>
	    </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<packaging>jar</packaging>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>gatech.edu</groupId>
				<artifactId>STIECR</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
